Add the best solution for FindPairs